<resources>
    <string name="app_name">Gerry Monitor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_splash">Gerry Monitor</string>
    <string name="title_activity_login">Gerry Login</string>
    <string name="title_activity_gerry_status">Gerry Status</string>
    <string name="prompt_client_id">Client Id</string>
    <string name="prompt_account">Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_error">Login failed, please enter correct username, password!</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password</string>
    <string name="notification_app_name">Gerry</string>
    <string name="notification_service_name">Gerry Service</string>
    <string name="notification_channel_name">Gerry Events</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_title_1">Status</string>
    <string name="tab_title_2">Alerts</string>
    <string name="tab_title_3">Events</string>
    <string name="tab_title_4">Status2</string>

    <string name="status_unknown">Unknown status</string>
    <string name="status_not_ready">Not ready</string>
    <string name="status_standing">Standing</string>
    <string name="status_lying_on_floor">Lying on floor</string>
    <string name="status_lying_on_bed">Lying on bed</string>
    <string name="status_sitting">Sitting</string>
    <string name="status_walking">Walking</string>
    <string name="status_fallen">Fall on floor</string>
    <string name="status_on_bed">On bed</string>
    <string name="status_upbody_up_from_bed">Upper body up from bed</string>
    <string name="status_feet_off_bed">Feet off bed</string>
    <string name="status_sitting_on_toilet">Sitting on toilet</string>
    <string name="status_sitting_on_sofa">Sitting on sofa</string>
    <string name="status_in_shower">In shower</string>
    <string name="status_unit_empty">Empty</string>
    <string name="status_standing_on_chair">Standing on chair</string>
    <string name="status_sitting_on_floor">Sitting on floor</string>

    <string name="event_unknown">Unknown event</string>
    <string name="event_mdu_disconnect">Mdu disconnected</string>
    <string name="event_on_floor">Fallen, on floor</string>
    <string name="event_on_floor_no_movement">On floor, no movement</string>
    <string name="event_off_floor">Off floor</string>
    <string name="event_entering">Entering</string>

    <string name="event_leaving">Leaving</string>
    <string name="event_on_bed">On bed</string>
    <string name="event_off_bed">Off bed</string>
    <string name="event_standing">Standing</string>
    <string name="event_sitting">Sitting</string>

    <string name="event_walking">Walking</string>
    <string name="event_entering_at_configured_time">Entering at configured time</string>
    <string name="event_leaving_at_configured_time">Leaving at configured time</string>
    <string name="event_active_at_night">Active at night</string>
    <string name="event_frequent_bath_use">Frequent bath use</string>

    <string name="event_on_bed_not_move_too_long">On bed not move for too long</string>
    <string name="event_on_bed_too_long">On bed for too long</string>
    <string name="event_upper_body_up_from_bed">Upper body up from bed</string>
    <string name="event_stay_washroom_too_long">Stay in washroom too long</string>
    <string name="event_feet_off_bed">Feet off bed</string>

    <string name="event_sitting_on_toilet">Sitting on toilet</string>
    <string name="event_sitting_on_sofa">Sitting on sofa</string>
    <string name="event_enter_in_shower">Enter in shower</string>
    <string name="event_enter_unit">Enter unit</string>
    <string name="event_leave_unit">Leave unit</string>

    <string name="event_unit_empty">Unit empty</string>
    <string name="event_standing_on_chair">Standing on chair</string>
    <string name="event_wandering_at_night">Wandering at night</string>
    <string name="event_stay_in_shower_too_long">Stay in show too long</string>
    <string name="event_sit_on_toilet_too_long">Sit on toilet too long</string>

    <string name="event_sit_on_sofa_too_long">Sit on sofa too long</string>
    <string name="event_coughing">Coughing</string>
    <string name="event_stop_breathing">Stop breathing</string>

    <string name="event_sit_on_floor">Sit on floor</string>

    <!-- events added 20210111 ( 34-38 ) -->
    <string name="event_main_power_disconnect">Main power disconnect</string>
    <string name="event_bat_low_40">Battery low (40%)</string>
    <string name="event_bat_low_30">Battery low (30%)</string>
    <string name="event_bat_low_20">Battery low (20%)</string>
    <string name="event_bat_low_shutdown">Battery low shutdown</string>

    <string name="title_activity_gerry_live">Gerry Live</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_play_event">Gerry Play</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="events_header">Events</string>
    <string name="event_duration_title">Events/Alerts Display Duration</string>

    <string name="event_filter_title">Events/Alerts Filter</string>
    <string name="event_filter_summary">Select what alerts/events to display</string>

    <string name="alert_notification_title">Enable Alerts Notification</string>
    <string name="alert_notification_filter_title">Alerts Notification</string>
    <string name="alert_notification_filter_summary">Select what alerts send notification</string>


    <string name="user_header">User account</string>
    <string name="user_logout_title">Logout</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_gerry_settings">Gerry Settings</string>

</resources>