<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/events_header">

        <androidx.preference.ListPreference
            app:defaultValue="30"
            app:entries="@array/duration_entries"
            app:entryValues="@array/duration_values"
            app:key="event_duration"
            app:title="@string/event_duration_title"
            app:useSimpleSummaryProvider="true" />

        <MultiSelectListPreference
            app:defaultValue="@array/event_types"
            app:entries="@array/event_names"
            app:entryValues="@array/event_types"
            app:key="events_display"
            app:summary="@string/event_filter_summary"
            app:title="@string/event_filter_title" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:defaultValue="true"
            app:title="@string/alert_notification_title" />

        <MultiSelectListPreference
            app:dependency="notifications"
            app:defaultValue="@array/event_types"
            app:entries="@array/event_names"
            app:entryValues="@array/event_types"
            app:key="notification_filter"
            app:title="@string/alert_notification_filter_title"
            app:summary="@string/alert_notification_filter_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/user_header">
        <Preference
            app:dialogIcon="@android:drawable/ic_dialog_alert"
            app:dialogLayout="@android:layout/select_dialog_multichoice"
            app:dialogMessage="GERR TEST"
            app:dialogTitle="Gerrry"
            app:key="logout"
            app:negativeButtonText="Neg"
            app:positiveButtonText="Pos"
            app:summary="Logout from Gerry system"
            app:title="@string/user_logout_title" />
    </PreferenceCategory>

</PreferenceScreen>